app_build/argocd/base/Route/appvt121170-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: appvt121170
  name: appvt121170-route
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: appvt121170-svc
    weight: 100
  port:
    targetPort: appvt121170-svc-port
  wildcardPolicy: None
